# tukano

./: .flake8  .gitignore  Pipfile  README.md  base-requirements.txt  dev-requirements.txt  flight-guide.md  ground_daemon.py  mavlink_daemon.py  package.json  pyproject.toml  requirements.txt  rpi_startup.py  tukano_service.py
dialects/: common.xml  mav_tukano.xml
env/: defaults.env
etc/supervisor/: tukano.conf
etc/systemd/: mavlink_daemon.service  tukano.service
etc/uv4l/: uv4l-raspicam.conf
src/: actuators.py  bmp183.py  camera.py  camera_stream.py  celery_tasks.py  dragon.py  gato.js  ground_daemon.py  janus.py  leds.py  mavlink_daemon.py  sensor_tasks.py  sensors.py  settings.py  tasks.py  timer.py  tukano_service.py  util.py  uv4l_watchdog.py  video.py
src/prec_land/: calibration.yaml  lander.py  lander_with_bg.py  pc_aruco_data_generation_and_calib.py  pi_aruco_data_generation_and_calib.py  pi_prec_land_aruco.py  to_rpi_landing_script_pid.py
src/prec_land/aruco_utils/: __init__.py
src/prec_land/old_files/: pc_prec_land_aruco.py  pc_prec_land_aruco_single.py  pi_prec_land_aruco_single.py
src/prec_land/pid_utils/: control.py  flight_assist.py  main_proccess.py  pid.py  position_vector.py  (+4 more)
src/sensors/: __init__.py  am3202.py  bmp183.py  sensor_tasks.py
src/util/: __init__.py  custom_stream_track.py  leds.py  system.py  util.py
tools/: custom_stream_track.py  janus.py  janus_ros.py  prec_land.py  rpi_cam_stream.py  serial_read.py  serial_write.py
tools/ros_scripts/: custom_stream_track_ros.py  janus_ros.py
uv4l/: README.md  uv4l-raspicam.conf
