[tool.poetry]
name = "tukano"
version = "0.1.0"
description = ""
authors = ["Jose B <jose.zdy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pymavlink = "^2.4.1"
pyserial = "^3.4"
redis = "^3.3.11"
websocket-client = "^0.56.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.3"
dronekit-sitl = "^3.3.0"
opencv-python = "^4.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
